envoy/dynamic-lds.yaml
---
resources:
  - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_managers
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
                - name: envoy.filters.http.routers
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: all
                virtual_hosts:
                  - domains:
                      - '*'
                    name: melody_cluster
                    routes:
                      - match:
                          prefix: /
                        route:
                          cluster: melody_cluster
              stat_prefix: ingress_http
    name: dynamic_lds
