envoy/gen-small-envoy.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
  filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_managers
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: all
            virtual_hosts:
              - name: backend_cluster
                domains: ["*"]
                routes:
                  - match: { prefix: "/0/" }
                    route: { cluster: backend_cluster }
                  - match: { prefix: "/1/" }
                    route: { cluster: backend_cluster }
                  - match: { prefix: "/2/" }
                    route: { cluster: backend_cluster }
                  - match:
                      prefix: "/"
                    route:
                      cluster: backend_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
